build: add generated config file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # will have compiled files and executables
 debug/
 target/
-.idea/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
@@ -13,3 +12,7 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# Generated files by project
+.idea/
+rdns_servers.json
